# memi-engine

./: .gitignore  README.md  pyproject.toml
memi_engine/: __init__.py  app.py  config.py  images.py  menu.py  provider.py  registry.py  scientific_names.py
memi_engine/static/css/: style.css
memi_engine/static/js/: app.js
memi_engine/templates/: about.html  index.html
